# commit-me

./: .gitignore  README.md  cdk.json  cdk_app.py  output.json  pyproject.toml
lamda/: requirements.txt  update_readme.py
